syntax = "proto3";
package eosapi;

message EosSignData {
    string tx_data = 1;
    repeated string pub_keys = 2;
    string chain_id = 3;
    string to = 4;
    string from = 5;
    string payment = 6;
}

message EosTxInput {
    string path = 1;
    repeated EosSignData sign_datas = 2;
}

message EosTxOutput {
    string hash = 1;
    repeated string signs = 2;
}

message EosPubkey {
    string path = 1;
}

message EosPubkeyResponse {
    string pubkey = 1;
}

message EosMessageInput{
    string path = 1;
    string data = 2;
    bool is_hex = 3;
    string pubkey = 4;
}

message EosMessageOutput{
    string signature = 1;
}